# Heisenberg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PRODUCT_CONCEPT.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  action.yml  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  mutmut_config.py  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  sonar-project.properties  tach.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  mutation-testing.yml  refresh-demo-cases.yml  refresh-demo-scenarios.yml  release.yml  validate-real-world.yml
API/: index.html
ARCHITECTURE/: index.html
DEMO_PLAYGROUND_PLAN/: index.html
OBSERVATIONS/: index.html
action/: README.md  action.yml
api/overview/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: API.md  ARCHITECTURE.md  DEMO_PLAYGROUND_PLAN.md  OBSERVATIONS.md  PHASE_5_PLAN.md  discovery-ui-redesign.md  index.html  index.md
docs/api/: overview.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  configuration.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cli/: index.html
guide/configuration/: index.html
migrations/: env.py
migrations/versions/: 20250123_000000_initial_schema.py  20250124_000001_add_feedback_table.py  20250124_000002_add_usage_records_table.py  20250124_000003_add_async_tasks_table.py  20250124_150700_add_test_file_column.py
playground/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts
playground/cases/enso-org-enso-21405456332/: report.json
playground/components/: ConfidenceBadge.tsx  Layout.tsx  TerminalView.tsx
playground/pages/: CaseDetail.tsx  Dashboard.tsx
playground/public/demo-cases/: manifest.json
playground/scenarios/: manifest.json
playground/scenarios/enso-org-enso-21405456332/: diagnosis.json  metadata.json
playground/scenarios/scille-parsec-cloud-21404418902/: metadata.json  report.json
playground/services/: dataService.ts
scripts/: check-package-integrity.sh  discover_projects.py  setup-hooks.sh
search/: search_index.json
src/heisenberg/: __init__.py  __main__.py  ai_analyzer.py  analyze_case.py  analyze_scenario.py  analyzer.py  artifact_utils.py  blob_merger.py  cli.py  comment_formatter.py  diagnosis.py  formatters.py  freeze_case.py  freeze_scenario.py  github_artifacts.py  github_client.py  junit_parser.py  llm_client.py  log_compressor.py  manifest_generator.py  playwright_parser.py  prompt_builder.py  screenshot_analyzer.py  trace_analyzer.py  unified_model.py  validate_scenarios.py
src/heisenberg/analysis/: __init__.py  ai_analyzer.py
src/heisenberg/backend/: __init__.py  app.py  auth.py  config.py  cost_tracking.py  database.py  dependencies.py  health.py  logging.py  models.py  (+5 more)
tests/: conftest.py  factories.py  test_ai_analyzer.py  test_ai_analyzer_providers.py  test_analyze_case.py  test_analyze_scenario.py  test_analyzer.py  test_artifact_utils.py  test_backend_analyze.py  test_backend_cost_tracking.py  test_backend_database.py  test_backend_e2e.py  test_backend_feedback.py  test_backend_fuzz.py  test_backend_health.py  test_backend_integration.py  test_backend_logging.py  test_backend_migrations.py  test_backend_models.py  test_backend_multi_llm.py  test_backend_rate_limit.py  test_backend_retry.py  test_backend_task_queue.py  test_blob_merger_edge_cases.py  test_ci_cd.py  test_ci_workflow.py  test_cli.py  test_cli_action_integration.py  test_cli_fetch_github.py  test_cli_freeze.py  test_cli_fuzz.py  test_cli_junit.py  test_cli_unified_integration.py  test_cli_unified_output.py  test_cli_validate_cases.py  test_cli_validate_scenarios.py  test_code_review_fixes.py  test_comment_formatter.py  test_diagnosis.py  test_discover_projects.py  (+43 more)
tests/analysis/: test_analyze_case.py  test_analyzer.py
tests/backend/: test_backend_analyze.py  test_backend_api.py  test_backend_cost_tracking.py  test_backend_database.py  test_backend_feedback.py  test_backend_health.py  test_backend_migrations.py  test_backend_multi_llm.py  test_backend_task_queue.py
tests/cases/: test_freeze_case.py
tests/ci/: test_ci_cd.py  test_ci_workflow.py  test_validate_workflow.py
tests/cli/: test_cli.py  test_cli_fetch_github.py  test_cli_freeze.py  test_cli_junit.py  test_cli_unified_integration.py  test_cli_unified_output.py  test_report_auto_detection.py  test_typer_cli.py
tests/core/: test_artifact_selection.py  test_unified_model.py
tests/e2e/: conftest.py  test_backend_e2e.py  test_backend_fuzz.py  test_backend_integration.py  test_cli_action_integration.py  test_cli_fuzz.py  test_integration_github.py  test_llm_integration.py
tests/fixtures/: playwright_report.json
tests/integration/: __init__.py  conftest.py  test_backend_integration.py  test_llm_integration.py
tests/integrations/: test_docker_compose.py  test_docker_logs.py  test_docker_setup.py  test_github_action.py  test_github_artifacts.py
tests/llm/: test_llm_models.py  test_llm_providers.py  test_prompt_scenarios.py
tests/misc/: test_code_review_fixes.py  test_documentation.py  test_landing_page.py  test_real_world_fixtures.py  test_release.py
tests/parsers/: test_job_logs_processor.py  test_junit_parser.py  test_playwright_parser.py  test_trace_analyzer.py
tests/reports/: test_reports.py
tests/test_discovery/: test_analysis.py  test_artifact_download.py  test_cache.py  test_cli.py  test_client.py  test_display.py  test_events.py  test_models.py  test_quarantine.py  test_service.py  test_service_events.py  test_ui.py
tests/utils/: test_log_compressor.py
validation_tests/: .gitignore  package.json  playwright.config.ts
validation_tests/test-app/: index.html
validation_tests/tests/: assertion-failure.spec.ts  network-race.spec.ts  selector-dom.spec.ts  timeout-flaky.spec.ts
(+92 files in other folders)
