[project]
name = "heisenberg"
version = "1.8.5"
description = "AI Root Cause Analysis for Flaky Tests"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kamil Pajak" }]
keywords = ["testing", "playwright", "ci-cd", "flaky-tests", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.1.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "schemathesis>=3.38.0",
    "asgi-lifespan>=2.1.0",
    "python-semantic-release>=9.0.0",
    "mutmut>=2.5,<3.0",  # 3.x has stability issues (SIGSEGV crashes)
    "vulture>=2.11",  # dead code detection
]

[project.scripts]
heisenberg = "heisenberg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heisenberg"]

[tool.hatch.build.targets.sdist]
exclude = ["playground/", "cases/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
markers = [
    "e2e: marks tests as e2e tests (require API keys, use --run-e2e)",
    "fuzz: marks tests as fuzz tests (slower, use --run-fuzz)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S603",  # subprocess calls - we control all inputs
    "S607",  # partial executable paths - docker/gh are expected in PATH
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert is expected in tests
    "S105",  # hardcoded passwords in test assertions
    "S106",  # hardcoded passwords in test fixtures
    "S108",  # /tmp usage in tests is fine
]

[tool.ruff.lint.isort]
known-first-party = ["heisenberg"]

[tool.coverage.run]
source = ["src/heisenberg"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/heisenberg/__init__.py:__version__",
    "src/heisenberg/backend/app.py:__version__",
]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(deps\\):",
    "^build\\(deps\\):",
    "^ci:",
    "^test:",
    "^docs:",
    "^chore(?!\\(release\\)):",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

[dependency-groups]
dev = [
    "greenlet>=3.3.1",
    "pre-commit>=4.0.0",
    "tach>=0.25.0",
    "ty>=0.0.14",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

# Mutation Testing Configuration (mutmut 2.x)
# Note: mutmut 2.x uses setup.cfg format, see setup.cfg for config

# Type Checking (ty)
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

# Dead Code Detection (vulture)
[tool.vulture]
min_confidence = 80
paths = ["src/heisenberg"]
exclude = ["**/migrations/"]
ignore_names = [
    # pytest fixtures
    "tmp_path",
    "mock_*",
    # FastAPI/Pydantic
    "model_config",
    "model_validator",
    # CLI arguments
    "args",
    # Dataclass fields with defaults
    "field",
]
